FEAT : Microscope에서 NodeId 기반 Status(Workspace, Document) 추적용 API 추가
